example/lib/src/generated/errors/errors_localization_en.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for English (`en`).
class ErrorsLocalizationEn extends ErrorsLocalization {
  ErrorsLocalizationEn([String locale = 'en']) : super(locale);

  @override
  String get error => 'An error occurred';

  @override
  String get unexpectedError => 'An unexpected error occurred';

  @override
  String get bugReportSentText => 'Bug report sent successfully.';
}
